[package]
name = "profile"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
log = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemalloc-ctl = "0.3.2"
jemallocator = "0.3.2"

[target.'cfg(unix)'.dependencies.jemalloc-sys]
version = "0.3.2"
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]
